# clinterface

./: .gitignore  CHANGELOG  CHANGELOG.txt  CHANGES  README  README.md  README.rst  TODO  TODO.rst  bulletin-test-cleanup  pyproject.toml  setup.cfg  setup.py
bulletin/: __init__.py  client.py  dialogs.py  tkdialogs.py
clinterface/: __init__.py  colors.py  completion.py  messages.py  printing.py  prompts.py  selection.py  utils.py
consoleutils/: prompts.py
runutils/: __init__.py  client.py  prompts.py
