[metadata]
name = clinterface
version = 0.1.0
url = https://github.com/josemvas/clinterface
description = Runtime Python utilities
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = console cli prompt
license = LGPLv3+
license_file = LICENSE
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.3
