[metadata]
name = clinterface
version = 0.3.1
url = https://github.com/josemvas/clinterface
description = Simple command line interface library
long_description = file: README
long_description_content_type = text/markdown
keywords = console cli prompt
license = LGPLv3+
license_file = LICENSE
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.6
